--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
 </head>
 <body>
     <main class="container">
-        <h2>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h2>
-        <img src="./img/Combo.png" alt="O Combo+ é a junção do Alura+ e o 
-        Alura Língua">
+        <section>
+            <h2>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h2>
+            <img src="./img/Combo.png" alt="O Combo+ é a junção do Alura+ e o 
+            Alura Língua">
+            <a href="www.alura.com.br" class="main_button">Assine por 12x de R$120,00*</a>
+            <a href="www.alura.com.br" class="secondary_button">Assinar Somente o Alura+</a>
+            <p>O preço pode variar caso a assinatura seja feita em outros planos.</p>
+        </section>
     </main>
 </body>
 </html>
