--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alura Plus</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <main class="container">
         <section>
-            <h2>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h2>
+            <h2 class="container__title">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h2>
             <img src="./img/Combo.png" alt="O Combo+ é a junção do Alura+ e o 
             Alura Língua">
             <a href="www.alura.com.br" class="main_button">Assine por 12x de R$120,00*</a>
             <a href="www.alura.com.br" class="secondary_button">Assinar Somente o Alura+</a>
-            <p>O preço pode variar caso a assinatura seja feita em outros planos.</p>
+            <p class="warning">O preço pode variar caso a assinatura seja feita em outros planos.</p>
         </section>
     </main>
 </body>
