--- a/index.html
+++ b/index.html
@@ -10,15 +10,58 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <main class="container">
-        <section>
-            <h2 class="container__title">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h2>
-            <img src="./img/Combo.png" alt="O Combo+ é a junção do Alura+ e o 
-            Alura Língua">
-            <a href="www.alura.com.br" class="main_button">Assine por 12x de R$120,00*</a>
-            <a href="www.alura.com.br" class="secondary_button">Assinar Somente o Alura+</a>
-            <p class="warning">O preço pode variar caso a assinatura seja feita em outros planos.</p>
-        </section>
+    <main>
+        <h2>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h2>
+        <img src="./img/Combo.png" alt="">
+        <a href="#">Assine por 12x de R$ 120,00*</a>
+        <a href="#">Assinar somente o Alura+</a>
+        <p>*O preço pode variar caso a assinatura seja feita em outros planos.</p>
     </main>
+    <section>
+        <img src="./img/Plataformas.png" alt="">
+        <h3>Assista do seu jeito</h3>
+        <p>Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+    </section>
+    <section>
+        <p>Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
+        <a href="">Assine o Combo+</a>
+        <img src="./img/Telas.png" alt="">
+    </section>
+    <section>
+        <img src="./img/Notebook.png" alt="">
+        <h3>Baixe seus cursos</h3>
+        <p>Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
+    </section>
+    <section>
+        <h3>Disponível nos seus dispositivos favoritos</h3>
+        <div>
+            <img src="./img/tv.png" alt="">
+            <p>TV</p>
+        </div>
+        <div>
+            <img src="./img/computador.png" alt="">
+            <p>Computadores</p>
+        </div>
+        <div>
+            <img src="./img/celular.png" alt="">
+            <p>Celulares e tablets</p>
+        </div>
+    </section>
+    <footer>
+       <img src="./img/Logo.png">
+       <nav>
+        <ul>
+            <li>Idioma</li>
+            <li>Dispositivos compatíveis</li>
+            <li>Contrato de assinatura</li>
+            <li>Política de Privacidade</li>
+            <li>Proteção de dados no Brasil</li>
+            <li>Anúncios personalizados</li>
+            <li>Ajuda</li>
+        </ul>
+       </nav>
+       <p>® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.</p>
+       <p>Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
+    </footer>
 </body>
 </html>
