--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
 </head>
 <body>
     <main>
-        <h2>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h2>
-        <img src="./img/Combo.png" alt="">
-        <a href="#">Assine por 12x de R$ 120,00*</a>
-        <a href="#">Assinar somente o Alura+</a>
-        <p>*O preço pode variar caso a assinatura seja feita em outros planos.</p>
+        <section class="main container">
+            <div>
+                <h2 class="main__title">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h2>
+                <img class="main__image" src="./img/Combo.png" alt="O Combo+ é a junção do Alura+ com o Alura Língua">
+                <a class="main__button" href="#">Assine por 12x de R$ 120,00*</a>
+                <a class="main__button transparent" href="#">Assinar somente o Alura+</a>
+                <p class="main__warning">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
+            </div>
+        </section>
     </main>
     <section>
         <img src="./img/Plataformas.png" alt="">
