estilização das sessões secundárias (Intermediate Sessions Styling)

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- sessão principal (main section) -->
     <main>
         <section class="main container">
-            <div>
+            <div class="main__div">
                 <h2 class="main__title">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h2>
                 <img class="main__image" src="./img/Combo.png" alt="O Combo+ é a junção do Alura+ com o Alura Língua">
                 <a class="main__button" href="#">Assine por 12x de R$ 120,00*</a>
@@ -21,20 +22,27 @@
             </div>
         </section>
     </main>
-    <section>
-        <img src="./img/Plataformas.png" alt="">
-        <h3>Assista do seu jeito</h3>
-        <p>Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+    <!-- Seções Secundárias (secondary sections)-->
+    <section class="secondary container">
+        <img class="secondary__image" src="./img/Plataformas.png" alt="monitor e smartphone">
+        <div class="secondary__div">
+            <h3 class="secondary__title">Assista do seu jeito</h3>
+            <p class="secondary__text">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+        </div>
     </section>
-    <section>
-        <p>Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
-        <a href="">Assine o Combo+</a>
-        <img src="./img/Telas.png" alt="">
+    <section class="secondary container">
+        <div class="secondary__div">
+            <p class="secondary__text plataform-text">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
+            <a class="main__button plataform-button" href="">Assine o Combo+</a>
+        </div>
+        <img class="secondary__image" src="./img/Telas.png" alt="Alura+ e Alura Línguas">
     </section>
-    <section>
-        <img src="./img/Notebook.png" alt="">
-        <h3>Baixe seus cursos</h3>
-        <p>Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
+    <section class="secondary container">
+        <img class="secondary__image"  src="./img/Notebook.png" alt="notebook">
+        <div class="secondary__div">
+            <h3 class="secondary__title">Baixe seus cursos</h3>
+            <p class="secondary__text">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
+        </div>
     </section>
     <section>
         <h3>Disponível nos seus dispositivos favoritos</h3>
