--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
         </section>
     </main>
-    <!-- Seções Secundárias (secondary sections)-->
+    <!-- seções secundárias (secondary sections)-->
     <section class="secondary container">
         <img class="secondary__image" src="./img/Plataformas.png" alt="monitor e smartphone">
         <div class="secondary__div">
@@ -44,20 +44,23 @@
             <p class="secondary__text">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
         </div>
     </section>
-    <section>
-        <h3>Disponível nos seus dispositivos favoritos</h3>
-        <div>
-            <img src="./img/tv.png" alt="">
-            <p>TV</p>
-        </div>
-        <div>
-            <img src="./img/computador.png" alt="">
-            <p>Computadores</p>
-        </div>
-        <div>
-            <img src="./img/celular.png" alt="">
-            <p>Celulares e tablets</p>
-        </div>
+    <!-- sessão de dispositivos (device section)-->
+    <section class="device">
+        <h3 class="device-title">Disponível nos seus dispositivos favoritos</h3>
+        <ul>
+            <li>
+                <img src="./img/tv.png" alt="ícone de televisão">
+                <p>TV</p>
+            </li>
+            <li>
+                <img src="./img/computador.png" alt="ícone de computador">
+                <p>Computadores</p>
+            </li>
+            <li>
+                <img src="./img/celular.png" alt="ícone de celular">
+                <p>Celulares e tablets</p>
+            </li>
+        </ul>
     </section>
     <footer>
        <img src="./img/Logo.png">
