estilização da sessão de dispositivos (device session styling)

--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
     </section>
     <!-- sessão de dispositivos (device section)-->
     <section class="device">
-        <h3 class="device-title">Disponível nos seus dispositivos favoritos</h3>
-        <ul>
+        <h3 class="device__title">Disponível nos seus dispositivos favoritos</h3>
+        <ul class="device__list">
             <li>
                 <img src="./img/tv.png" alt="ícone de televisão">
-                <p>TV</p>
+                <p class="device__item-text">TV</p>
             </li>
             <li>
                 <img src="./img/computador.png" alt="ícone de computador">
-                <p>Computadores</p>
+                <p class="device__item-text">Computadores</p>
             </li>
             <li>
                 <img src="./img/celular.png" alt="ícone de celular">
-                <p>Celulares e tablets</p>
+                <p class="device__item-text">Celulares e tablets</p>
             </li>
         </ul>
     </section>
