--- a/index.html
+++ b/index.html
@@ -62,20 +62,33 @@
             </li>
         </ul>
     </section>
-    <footer>
-       <img src="./img/Logo.png">
-       <nav>
-        <ul>
-            <li>Idioma</li>
-            <li>Dispositivos compatíveis</li>
-            <li>Contrato de assinatura</li>
-            <li>Política de Privacidade</li>
-            <li>Proteção de dados no Brasil</li>
-            <li>Anúncios personalizados</li>
-            <li>Ajuda</li>
-        </ul>
-       </nav>
-       <p>® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.</p>
+    <!-- rodapé (footer) -->
+    <footer class="footer">
+       <img class="footer__image" src="./img/Logo.png" alt="Alura+">
+       <ul class="footer__list">
+           <li class="footer__list-item">    
+               <a href="#">Dispositivos compatíveis</a>
+           </li>
+           <li class="footer__list-item">    
+               <a href="#">Contrato de assinatura</a>
+           </li>
+           <li class="footer__list-item">    
+               <a href="#">Política de Privacidade</a>
+           </li>
+           <li class="footer__list-item">    
+               <a href="#">Proteção de dados no Brasil</a>
+           </li>
+           <li class="footer__list-item">    
+               <a href="#">Anúncios personalizados</a>
+           </li>
+           <li class="footer__list-item">    
+               <a href="#">Idioma</a>
+           </li>
+           <li class="footer__list-item">    
+               <a href="#">Ajuda</a>
+           </li>
+       </ul>              
+       <p class="footer__text">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.</p>
        <p>Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
     </footer>
 </body>
