--- a/index.html
+++ b/index.html
@@ -66,30 +66,30 @@
     <footer class="footer">
        <img class="footer__image" src="./img/Logo.png" alt="Alura+">
        <ul class="footer__list">
-           <li class="footer__list-item">    
-               <a href="#">Dispositivos compatíveis</a>
+           <li>    
+               <a  class="footer__list-item" href="#">Dispositivos compatíveis</a>
            </li>
-           <li class="footer__list-item">    
-               <a href="#">Contrato de assinatura</a>
+           <li>    
+               <a class="footer__list-item" href="#">Contrato de assinatura</a>
            </li>
-           <li class="footer__list-item">    
-               <a href="#">Política de Privacidade</a>
+           <li>    
+               <a  class="footer__list-item" href="#">Política de Privacidade</a>
            </li>
-           <li class="footer__list-item">    
-               <a href="#">Proteção de dados no Brasil</a>
+           <li>    
+               <a class="footer__list-item" href="#">Proteção de dados no Brasil</a>
            </li>
-           <li class="footer__list-item">    
-               <a href="#">Anúncios personalizados</a>
+           <li>    
+               <a class="footer__list-item" href="#">Anúncios personalizados</a>
            </li>
-           <li class="footer__list-item">    
-               <a href="#">Idioma</a>
+           <li>    
+               <a class="footer__list-item" href="#">Idioma</a>
            </li>
-           <li class="footer__list-item">    
-               <a href="#">Ajuda</a>
+           <li>    
+               <a class="footer__list-item" href="#">Ajuda</a>
            </li>
        </ul>              
        <p class="footer__text">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.</p>
-       <p>Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
+       <p class="footer__text">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
     </footer>
 </body>
 </html>
